syntax = "proto3";

package org.project_planton.provider.kubernetes.kubernetesexternaldns.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/kubernetes/kubernetesexternaldns/v1/spec.proto";
import "org/project_planton/provider/kubernetes/kubernetesexternaldns/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

//kubernetes-external-dns
message KubernetesExternalDns {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'kubernetes.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'KubernetesExternalDns'];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  KubernetesExternalDnsSpec spec = 4 [(buf.validate.field).required = true];

  //status
  KubernetesExternalDnsStatus status = 5;
}

//kubernetes-external-dns status.
message KubernetesExternalDnsStatus {
  //stack-outputs
  KubernetesExternalDnsStackOutputs outputs = 1;
}
